# backend/docs/swagger.json
@@ -844,9 +844,6 @@
                 "consumes": [
                     "application/json"
                 ],
-                "produces": [
-                    "application/json"
-                ],
                 "tags": [
                     "MatchEnd"
                 ],
@@ -891,9 +888,6 @@
                 "consumes": [
                     "application/json"
                 ],
-                "produces": [
-                    "application/json"
-                ],
                 "tags": [
                     "MatchEnd"
                 ],
@@ -936,9 +930,6 @@
             "put": {
                 "description": "Update one MatchEnd totalScores by id",
                 "consumes": [
-                    "application/json"
-                ],
-                "produces": [
                     "application/json"
                 ],
                 "tags": [
@@ -1025,13 +1016,54 @@
                 "consumes": [
                     "application/json"
                 ],
-                "produces": [
+                "tags": [
+                    "MatchResult"
+                ],
+                "summary": "Update one MatchResult isWinner",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "MatchResult ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "MatchResult",
+                        "name": "MatchResult",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/matchresult/lanenumber/{id}": {
+            "put": {
+                "description": "Update one MatchResult laneNumber by id",
+                "consumes": [
                     "application/json"
                 ],
                 "tags": [
                     "MatchResult"
                 ],
-                "summary": "Update one MatchResult isWinner",
+                "summary": "Update one MatchResult laneNumber",
                 "parameters": [
                     {
                         "type": "integer",
@@ -1147,9 +1179,6 @@
                 "consumes": [
                     "application/json"
                 ],
-                "produces": [
-                    "application/json"
-                ],
                 "tags": [
                     "MatchResult"
                 ],
@@ -1192,9 +1221,6 @@
             "put": {
                 "description": "Update one MatchResult totalPoints by id",
                 "consumes": [
-                    "application/json"
-                ],
-                "produces": [
                     "application/json"
                 ],
                 "tags": [
@@ -1271,9 +1297,6 @@
             },
             "delete": {
                 "description": "Delete one MatchResult with matchEnds and matchScores by id",
-                "produces": [
-                    "application/json"
-                ],
                 "tags": [
                     "MatchResult"
                 ],
@@ -1307,9 +1330,6 @@
             "put": {
                 "description": "Update one MatchScore score by id",
                 "consumes": [
-                    "application/json"
-                ],
-                "produces": [
                     "application/json"
                 ],
                 "tags": [
